src/main/gen/org/intellij/sdk/language/parser/YakshaParser.java
// This is a generated file. Not intended for manual editing.
package org.intellij.sdk.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.intellij.sdk.language.psi.YakshaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class YakshaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return yakshaFile(b, l + 1);
  }

  /* ********************************************************** */
  // OPERATOR_AT IDENTIFIER annotation_arg? S? NL
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, OPERATOR_AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, OPERATOR_AT, IDENTIFIER);
    r = r && annotation_2(b, l + 1);
    r = r && annotation_3(b, l + 1);
    r = r && consumeToken(b, NL);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  // annotation_arg?
  private static boolean annotation_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2")) return false;
    annotation_arg(b, l + 1);
    return true;
  }

  // S?
  private static boolean annotation_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_3")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // S? OPERATOR_OPEN_P S? STRING S? OPERATOR_CLOSE_P
  public static boolean annotation_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_arg")) return false;
    if (!nextTokenIs(b, "<annotation arg>", OPERATOR_OPEN_P, S)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_ARG, "<annotation arg>");
    r = annotation_arg_0(b, l + 1);
    r = r && consumeToken(b, OPERATOR_OPEN_P);
    r = r && annotation_arg_2(b, l + 1);
    r = r && consumeToken(b, STRING);
    r = r && annotation_arg_4(b, l + 1);
    r = r && consumeToken(b, OPERATOR_CLOSE_P);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // S?
  private static boolean annotation_arg_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_arg_0")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean annotation_arg_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_arg_2")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean annotation_arg_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_arg_4")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // exp (S? OPERATOR_COMMA S? exp)*
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, "<arguments>");
    r = exp(b, l + 1);
    r = r && arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (S? OPERATOR_COMMA S? exp)*
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arguments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arguments_1", c)) break;
    }
    return true;
  }

  // S? OPERATOR_COMMA S? exp
  private static boolean arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arguments_1_0_0(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COMMA);
    r = r && arguments_1_0_2(b, l + 1);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // S?
  private static boolean arguments_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0_0")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean arguments_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0_2")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // I identifier_exp S? OPERATOR_EQ S? exp S? NL
  public static boolean assignment_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement")) return false;
    if (!nextTokenIs(b, I)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, I);
    r = r && identifier_exp(b, l + 1);
    r = r && assignment_statement_2(b, l + 1);
    r = r && consumeToken(b, OPERATOR_EQ);
    r = r && assignment_statement_4(b, l + 1);
    r = r && exp(b, l + 1);
    r = r && assignment_statement_6(b, l + 1);
    r = r && consumeToken(b, NL);
    exit_section_(b, m, ASSIGNMENT_STATEMENT, r);
    return r;
  }

  // S?
  private static boolean assignment_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement_2")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean assignment_statement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement_4")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean assignment_statement_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement_6")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // I KW_BREAK S? NL
  public static boolean break_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "break_statement")) return false;
    if (!nextTokenIs(b, I)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, I, KW_BREAK);
    r = r && break_statement_2(b, l + 1);
    r = r && consumeToken(b, NL);
    exit_section_(b, m, BREAK_STATEMENT, r);
    return r;
  }

  // S?
  private static boolean break_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "break_statement_2")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // I KW_CCODE S? STRING S? NL
  public static boolean ccode_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ccode_statement")) return false;
    if (!nextTokenIs(b, I)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, I, KW_CCODE);
    r = r && ccode_statement_2(b, l + 1);
    r = r && consumeToken(b, STRING);
    r = r && ccode_statement_4(b, l + 1);
    r = r && consumeToken(b, NL);
    exit_section_(b, m, CCODE_STATEMENT, r);
    return r;
  }

  // S?
  private static boolean ccode_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ccode_statement_2")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean ccode_statement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ccode_statement_4")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // pass_statement | COMMENT | empty_line | class_field
  public static boolean class_bits(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_bits")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_BITS, "<class bits>");
    r = pass_statement(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    if (!r) r = empty_line(b, l + 1);
    if (!r) r = class_field(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // I IDENTIFIER S? OPERATOR_COLON S? data_type S? NL
  public static boolean class_field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_field")) return false;
    if (!nextTokenIs(b, I)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, I, IDENTIFIER);
    r = r && class_field_2(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COLON);
    r = r && class_field_4(b, l + 1);
    r = r && data_type(b, l + 1);
    r = r && class_field_6(b, l + 1);
    r = r && consumeToken(b, NL);
    exit_section_(b, m, CLASS_FIELD, r);
    return r;
  }

  // S?
  private static boolean class_field_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_field_2")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean class_field_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_field_4")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean class_field_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_field_6")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // KW_CLASS S IDENTIFIER S? OPERATOR_COLON S? NL class_bits+
  public static boolean class_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_statement")) return false;
    if (!nextTokenIs(b, KW_CLASS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_CLASS, S, IDENTIFIER);
    r = r && class_statement_3(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COLON);
    r = r && class_statement_5(b, l + 1);
    r = r && consumeToken(b, NL);
    r = r && class_statement_7(b, l + 1);
    exit_section_(b, m, CLASS_STATEMENT, r);
    return r;
  }

  // S?
  private static boolean class_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_statement_3")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean class_statement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_statement_5")) return false;
    consumeToken(b, S);
    return true;
  }

  // class_bits+
  private static boolean class_statement_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_statement_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = class_bits(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!class_bits(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "class_statement_7", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // term (S? OPERATOR_COMPARISON S? term)* | term
  public static boolean comparison(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARISON, "<comparison>");
    r = comparison_0(b, l + 1);
    if (!r) r = term(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // term (S? OPERATOR_COMPARISON S? term)*
  private static boolean comparison_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = term(b, l + 1);
    r = r && comparison_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (S? OPERATOR_COMPARISON S? term)*
  private static boolean comparison_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!comparison_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comparison_0_1", c)) break;
    }
    return true;
  }

  // S? OPERATOR_COMPARISON S? term
  private static boolean comparison_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comparison_0_1_0_0(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COMPARISON);
    r = r && comparison_0_1_0_2(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // S?
  private static boolean comparison_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_0_1_0_0")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean comparison_0_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_0_1_0_2")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER S? OPERATOR_COLON S? data_type S? OPERATOR_EQ S? literal S? NL
  public static boolean const_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_statement")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && const_statement_1(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COLON);
    r = r && const_statement_3(b, l + 1);
    r = r && data_type(b, l + 1);
    r = r && const_statement_5(b, l + 1);
    r = r && consumeToken(b, OPERATOR_EQ);
    r = r && const_statement_7(b, l + 1);
    r = r && literal(b, l + 1);
    r = r && const_statement_9(b, l + 1);
    r = r && consumeToken(b, NL);
    exit_section_(b, m, CONST_STATEMENT, r);
    return r;
  }

  // S?
  private static boolean const_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_statement_1")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean const_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_statement_3")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean const_statement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_statement_5")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean const_statement_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_statement_7")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean const_statement_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_statement_9")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // I KW_CONTINUE S? NL
  public static boolean continue_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "continue_statement")) return false;
    if (!nextTokenIs(b, I)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, I, KW_CONTINUE);
    r = r && continue_statement_2(b, l + 1);
    r = r && consumeToken(b, NL);
    exit_section_(b, m, CONTINUE_STATEMENT, r);
    return r;
  }

  // S?
  private static boolean continue_statement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "continue_statement_2")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // data_type_bit data_type_args | data_type_bit
  public static boolean data_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATA_TYPE, "<data type>");
    r = data_type_0(b, l + 1);
    if (!r) r = data_type_bit(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // data_type_bit data_type_args
  private static boolean data_type_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = data_type_bit(b, l + 1);
    r = r && data_type_args(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // data_type (S? OPERATOR_COMMA S? data_type)*
  public static boolean data_type_arg_bits(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_arg_bits")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATA_TYPE_ARG_BITS, "<data type arg bits>");
    r = data_type(b, l + 1);
    r = r && data_type_arg_bits_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (S? OPERATOR_COMMA S? data_type)*
  private static boolean data_type_arg_bits_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_arg_bits_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!data_type_arg_bits_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "data_type_arg_bits_1", c)) break;
    }
    return true;
  }

  // S? OPERATOR_COMMA S? data_type
  private static boolean data_type_arg_bits_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_arg_bits_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = data_type_arg_bits_1_0_0(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COMMA);
    r = r && data_type_arg_bits_1_0_2(b, l + 1);
    r = r && data_type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // S?
  private static boolean data_type_arg_bits_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_arg_bits_1_0_0")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean data_type_arg_bits_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_arg_bits_1_0_2")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // S? OPERATOR_OPEN_SQB S? data_type_arg_bits S? OPERATOR_CLOSE_SQB S?
  public static boolean data_type_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_args")) return false;
    if (!nextTokenIs(b, "<data type args>", OPERATOR_OPEN_SQB, S)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATA_TYPE_ARGS, "<data type args>");
    r = data_type_args_0(b, l + 1);
    r = r && consumeToken(b, OPERATOR_OPEN_SQB);
    r = r && data_type_args_2(b, l + 1);
    r = r && data_type_arg_bits(b, l + 1);
    r = r && data_type_args_4(b, l + 1);
    r = r && consumeToken(b, OPERATOR_CLOSE_SQB);
    r = r && data_type_args_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // S?
  private static boolean data_type_args_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_args_0")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean data_type_args_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_args_2")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean data_type_args_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_args_4")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean data_type_args_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_args_6")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // data_type_identifier | PRIMITIVE_DATA_TYPE | KW_NONE
  public static boolean data_type_bit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_bit")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATA_TYPE_BIT, "<data type bit>");
    r = data_type_identifier(b, l + 1);
    if (!r) r = consumeToken(b, PRIMITIVE_DATA_TYPE);
    if (!r) r = consumeToken(b, KW_NONE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER (OPERATOR_DOT IDENTIFIER)?
  public static boolean data_type_identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_identifier")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && data_type_identifier_1(b, l + 1);
    exit_section_(b, m, DATA_TYPE_IDENTIFIER, r);
    return r;
  }

  // (OPERATOR_DOT IDENTIFIER)?
  private static boolean data_type_identifier_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_identifier_1")) return false;
    data_type_identifier_1_0(b, l + 1);
    return true;
  }

  // OPERATOR_DOT IDENTIFIER
  private static boolean data_type_identifier_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "data_type_identifier_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, OPERATOR_DOT, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // pass_statement | ccode_statement | if_statement | elif_statement | else_statement | while_statement | del_statement | defer_statement | return_statement | expr_statement | assignment_statement | let_statement | empty_line | continue_statement | break_statement | COMMENT
  public static boolean def_bits(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_bits")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEF_BITS, "<def bits>");
    r = pass_statement(b, l + 1);
    if (!r) r = ccode_statement(b, l + 1);
    if (!r) r = if_statement(b, l + 1);
    if (!r) r = elif_statement(b, l + 1);
    if (!r) r = else_statement(b, l + 1);
    if (!r) r = while_statement(b, l + 1);
    if (!r) r = del_statement(b, l + 1);
    if (!r) r = defer_statement(b, l + 1);
    if (!r) r = return_statement(b, l + 1);
    if (!r) r = expr_statement(b, l + 1);
    if (!r) r = assignment_statement(b, l + 1);
    if (!r) r = let_statement(b, l + 1);
    if (!r) r = empty_line(b, l + 1);
    if (!r) r = continue_statement(b, l + 1);
    if (!r) r = break_statement(b, l + 1);
    if (!r) r = consumeToken(b, COMMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER S? OPERATOR_COLON S? data_type
  public static boolean def_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_param")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && def_param_1(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COLON);
    r = r && def_param_3(b, l + 1);
    r = r && data_type(b, l + 1);
    exit_section_(b, m, DEF_PARAM, r);
    return r;
  }

  // S?
  private static boolean def_param_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_param_1")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean def_param_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_param_3")) return false;
    consumeToken(b, S);
    return true;
  }

  /* ********************************************************** */
  // def_param (S? OPERATOR_COMMA S? def_param)*
  public static boolean def_params(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_params")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = def_param(b, l + 1);
    r = r && def_params_1(b, l + 1);
    exit_section_(b, m, DEF_PARAMS, r);
    return r;
  }

  // (S? OPERATOR_COMMA S? def_param)*
  private static boolean def_params_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_params_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!def_params_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "def_params_1", c)) break;
    }
    return true;
  }

  // S? OPERATOR_COMMA S? def_param
  private static boolean def_params_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_params_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = def_params_1_0_0(b, l + 1);
    r = r && consumeToken(b, OPERATOR_COMMA);
    r = r && def_params_1_0_2(b, l + 1);
    r = r && def_param(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // S?
  private static boolean def_params_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_params_1_0_0")) return false;
    consumeToken(b, S);
    return true;
  }

  // S?
  private static boolean def_params_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_params_1_0_2")) return false;
    consumeToken(b, S);
    return true;
  }
